kqed/src/objects/Shipment__c.object
<CustomObject>
    <fields>
        <fullName>Auto_Number__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Auto-Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <picklist>
            <picklistValues>
                <fullName>FedEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Included_Premiums__c</fullName>
        <inlineHelpText>A list of products included in this shipment.</inlineHelpText>
        <label>Included Premiums</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_Date__c</fullName>
        <inlineHelpText>Date the label was last printed</inlineHelpText>
        <label>Label Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Giving</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printing_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printing Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipment_Number_Name__c</fullName>
        <formula>VALUE(SUBSTITUTE(Name, &apos;Ship-&apos;, &apos;&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Number (Name)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <formula>Street_Address__c  &amp;  BR()  &amp;  City__c  &amp; &quot;, &quot;  &amp; State__c &amp; &quot;, &quot;  &amp; Postal_Code__c &amp; 
IF(Country__c &lt;&gt; &apos;USA&apos;, BR()  &amp;  Country__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact__c</fullName>
        <label>Shipping Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Cost__c</fullName>
        <label>Shipping Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping_Date__c</fullName>
        <label>Shipping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Scheduled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>To_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Shipment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>To_Print__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Label_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Shipping_Contact__c</columns>
        <columns>Shipping_Address__c</columns>
        <columns>City__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ship-{0000}</displayFormat>
        <label>Shipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_address_is_complete</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(Status__c,&apos;Pending&apos;), ISPICKVAL(Status__c, &apos;Delivered&apos;)), OR( ISBLANK( Street_Address__c ),ISBLANK(  City__c  ),ISBLANK(  State__c  ),ISBLANK(  Postal_Code__c  )))</errorConditionFormula>
        <errorMessage>Please complete the shipping address.</errorMessage>
    </validationRules>
</CustomObject>